# Multipixel_Camera_Analysis

./: pyproject.toml
src/: BeadDataFile.py  multipixel_camera_analysis.py
